// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components|JWPlayerETP|Controls|LiveStatus Should match snapshot offline 1`] = `
.emotion-4 {
  margin-left: 16px;
  margin-right: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.emotion-0 {
  color: #F8F8F9;
  font-family: font-family:'ESP AlphaHeadline Tab',-apple-system,-system-ui,system-ui,BlinkMacSystemFont,'Segoe UI',Helvetica,Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-smooth: antialiased;
  font-size: 12px;
  font-weight: bold;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
  line-height: 15px;
  text-align: center;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 20px;
  width: 43px;
  border-radius: 1px;
  background-color: transparent;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<LiveStatus
  isLive={false}
>
  <Styled(div)>
    <div
      className="emotion-4 emotion-5"
    >
      <Styled(div)
        isLive={false}
      >
        <div
          className="emotion-2 emotion-3"
        >
          <Styled(div)>
            <div
              className="emotion-0 emotion-1"
            >
              LIVE
            </div>
          </Styled(div)>
        </div>
      </Styled(div)>
    </div>
  </Styled(div)>
</LiveStatus>
`;

exports[`Components|JWPlayerETP|Controls|LiveStatus Should match snapshot on live 1`] = `
<Styled(div)>
  <Styled(div)
    isLive={true}
  >
    <Styled(div)>
      LIVE
    </Styled(div)>
  </Styled(div)>
</Styled(div)>
`;

exports[`Components|JWPlayerETP|Controls|LiveStatus Should match snapshot on live 2`] = `
.emotion-4 {
  margin-left: 16px;
  margin-right: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 20px;
  width: 43px;
  border-radius: 1px;
  background-color: #CC0036;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 {
  color: #F8F8F9;
  font-family: font-family:'ESP AlphaHeadline Tab',-apple-system,-system-ui,system-ui,BlinkMacSystemFont,'Segoe UI',Helvetica,Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-smooth: antialiased;
  font-size: 12px;
  font-weight: bold;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
  line-height: 15px;
  text-align: center;
}

<LiveStatus
  isLive={true}
>
  <Styled(div)>
    <div
      className="emotion-4 emotion-5"
    >
      <Styled(div)
        isLive={true}
      >
        <div
          className="emotion-2 emotion-3"
        >
          <Styled(div)>
            <div
              className="emotion-0 emotion-1"
            >
              LIVE
            </div>
          </Styled(div)>
        </div>
      </Styled(div)>
    </div>
  </Styled(div)>
</LiveStatus>
`;

exports[`Components|JWPlayerETP|Controls|LiveStatus Should match snapshot on rewindCounts 1`] = `
<Styled(div)>
  <Styled(p)
    length={8}
  >
    -1.23.23
  </Styled(p)>
</Styled(div)>
`;
